--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
-<head></head><body><pre style="margin: 0px; padding: 0px; border: 0px; font-style: normal; font-weight: 400; font-size: 17px; line-height: inherit; font-family: inherit; vertical-align: baseline; text-align: left; text-indent: 0px;"><font color="#eeeb82">&lt;!DOCTYPE html&gt;
-&lt;html&gt;<br>&lt;head&gt;<br></font><span class="tagnamecolor" style="font-family: Consolas, Menlo, &quot;courier new&quot;, monospace; font-size: 15px; font-style: normal; font-weight: 400; text-align: start; text-indent: 0px; white-space: normal;"><span class="tagcolor" style="color: rgb(153, 153, 153);">&lt;</span><font color="#990055">title</font><span class="tagcolor" style="color: rgb(153, 153, 153);">&gt;</span><span class="tagcolor" style=""><font color="#000000">Jia-qi-Huang.github.io</font></span></span><span class="tagnamecolor" style="color: rgb(153, 0, 85); font-family: Consolas, Menlo, &quot;courier new&quot;, monospace; font-size: 15px; font-style: normal; font-weight: 400; text-align: start; text-indent: 0px; white-space: normal;"><span class="tagcolor" style=" color: rgb(153, 153, 153);">&lt;</span>/title<span class="tagcolor" style=" color: rgb(153, 153, 153);">&gt;</span></span><font color="#eeeb82"><br></font><span class="tagnamecolor" style="color: rgb(153, 0, 85); font-family: Consolas, Menlo, &quot;courier new&quot;, monospace; font-size: 15px; font-style: normal; font-weight: 400; text-align: start; text-indent: 0px; white-space: normal;"><span class="tagcolor" style=" color: rgb(153, 153, 153);">&lt;/head&gt;</span></span><font color="#eeeb82">
-&lt;body&gt;
-&lt;h1&gt;Jiaqi Huang (黄嘉祺)&lt;/h1&gt;
-&lt;p&gt; Welcome to my Homepage! I am a PhD student in Economics at Pennsylvannia State University interested in Econometrics. &lt;/p&gt;
-&lt;/body&gt;
-&lt;/html&gt;</font></pre></body>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Jia-qi-Huang.github.io</title>
+</head>
+<body>
+
+<h1>Jiaqi Huang (黄嘉祺)</h1>
+<p>Welcome to my webpage! I am a PhD student in 
+Economics at Pennsylvannia State University interested in Econometrics. </p>
+
+</body>
+</html>
