Commit with photos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+.grid-container {
+  display: grid;
+  grid-template-columns: 30% 70%;
+}
+</style>
 <title>Jia-qi-Huang.github.io</title>
 </head>
 <body>
 
 <h1>Jiaqi Huang (黄嘉祺)</h1>
+
+<div class="grid-container">
+
+<div>
+<img src="photo.jpg" style="width: 100px; height: 120px;">
+</div>
+
+<div>
 <p>Welcome to my webpage! I am a PhD student in 
-Economics at Pennsylvannia State University interested in Econometrics. </p>
+Economics at Pennsylvannia State University interested in Econometrics. 
+You can contact me at jiaqi.huang@psu.edu </p>
+</div>
+
+</div>
+
 
 </body>
 </html>
