--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 <style>
 h1 {text-align: center;}
-p {text-align: center;}
+p {text-align: center; font-size: 14px}
+
 .grid-container {
   display: grid;
   grid-template-columns: 30% 70%;
+  row-gap: 30px
 }
 </style>
 <title>Jia-qi-Huang.github.io</title>
@@ -18,14 +20,42 @@ p {text-align: center;}
 <div class="grid-container">
 
 <div>
-<img src="photo.jpg" style="width: 100px; height: 120px;">
+<img src="photo.jpg" style="width: 300px; height: 360px;">
 </div>
 
 <div>
 <p>Welcome to my webpage! I am a PhD student in 
 Economics at Pennsylvannia State University interested in Econometrics. 
-You can contact me at jiaqi.huang@psu.edu </p>
+You can contact me at jiaqi.huang@psu.edu 
+<br>
+The link to my CV is <a href="https://pennstateoffice365-my.sharepoint.com/:b:/g/personal/jph6716_psu_edu/EcIGrvN2zDBHpqNE7CHBIx8B7wxw3UUw-xp6Wr4Tg00-1A?e=Gbv1Lf"> here</a>. 
+ </p>
 </div>
+
+<div>
+<h2>Working Papers </h2>
+</div>
+
+<div>
+<p> Patrik Guggenberger and Jiaqi Huang. On the numerical approximation of
+minimax regret rules via fictitious play. arXiv preprint arXiv:2503.10932, 2025. <a href="https://arxiv.org/pdf/2503.10932"> link </a> 
+</p>
+</div>
+
+<div>
+<h2> Publications </h2>
+</div>
+
+<div>
+<p>
+Feifei Yang, Jiaqi Huang, Xiao Feng, and Miles M Yang. Decision-making in
+a dynamic task: effects of goal orientation on stocks and flows performance.
+Chinese Management Studies, 14(3):695–713, 2020. <a href="https://www.emerald.com/insight/content/doi/10.1108/cms-03-2019-0086/full/html"> link </a>
+</p>
+</div>
+
+
+
 
 </div>
 
