--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 h1 {text-align: center;}
-p {text-align: center; font-size: 14px}
+p { font-size: 30px}
 
 .grid-container {
   display: grid;
